--- a/pricing.html
+++ b/pricing.html
@@ -18,6 +18,9 @@
         <div class="logo-text">Modulr<span>THE FUTURE OF BUSINESS OS</span></div>
       </a>
       <nav class="site-nav" id="site-nav">
+        <a href="dashboard.html" data-role="admin">Dashboard</a>
+        <a href="ops-dashboard.html" data-role="manager">Dashboard</a>
+        <a href="employee-dashboard.html" data-role="employee">Dashboard</a>
         <a href="index.html">Home</a>
         <a href="features.html">Features</a>
         <a class="active" href="pricing.html">Pricing</a>
