--- a/settings-employee.html
+++ b/settings-employee.html
@@ -21,8 +21,9 @@
         </div>
       </div>
                   <nav>
-        <a  href="dashboard.html" data-role="admin">Dashboard</a>
-        <a  href="ops-dashboard.html" data-role="employee">Dashboard</a>
+        <a href="dashboard.html" data-role="admin">Dashboard</a>
+        <a href="ops-dashboard.html" data-role="manager">Dashboard</a>
+        <a href="employee-dashboard.html" data-role="employee">Dashboard</a>
         <a href="inventory-operations.html">Operations</a>
         <a href="field-purchase.html" >Field Purchases</a>
         <a href="inventory-list.html">Inventory</a>
