Tightened role handling and edit form

--- a/settings.html
+++ b/settings.html
@@ -246,7 +246,7 @@
         <form id="editUserForm" class="inventory-form">
           <input type="hidden" id="edit-userId">
           <div class="form-row">
-            <label>Name<input id="edit-userName" required></label>
+            <label>Name<input id="edit-userName"></label>
             <label>Email<input id="edit-userEmail" type="email" required></label>
           </div>
           <div class="form-row">
