--- a/item-master.html
+++ b/item-master.html
@@ -21,9 +21,8 @@
         </div>
       </div>
                   <nav>
-        <a href="dashboard.html" data-role="admin">Dashboard</a>
-        <a href="ops-dashboard.html" data-role="manager">Dashboard</a>
-        <a href="employee-dashboard.html" data-role="employee">Dashboard</a>
+        <a  href="dashboard.html" data-role="admin">Dashboard</a>
+        <a  href="employee-dashboard.html" data-role="employee">Dashboard</a>
         <a href="inventory-operations.html">Operations</a>
         <a href="field-purchase.html" >Field Purchases</a>
         <a href="inventory-list.html">Inventory</a>
@@ -56,10 +55,7 @@
           <h3>Add / Edit Item</h3>
           <form id="itemForm" class="inventory-form">
             <div class="form-row">
-              <label>SKU / Part Number
-                <input id="itemCode" required placeholder="Unique identifier">
-                <span id="itemCodeHint" class="field-hint"></span>
-              </label>
+              <label>SKU / Part Number<input id="itemCode" required placeholder="Unique identifier"></label>
               <label>Item Name<input id="itemName" required placeholder="Item description"></label>
             </div>
             <div class="form-row">
@@ -119,19 +115,6 @@
             <button id="importBtn" type="button">Import CSV</button>
             <div id="importMsg" style="font-size:0.9rem;"></div>
           </div>
-          <div id="importPreview" class="import-preview hidden">
-            <div id="importSummary" class="import-summary"></div>
-            <div class="table-scroll">
-              <table class="import-table">
-                <thead><tr><th>Code</th><th>Name</th><th>Category</th><th>Unit Price</th></tr></thead>
-                <tbody id="importPreviewBody"></tbody>
-              </table>
-            </div>
-            <div class="form-row">
-              <button id="importConfirmBtn" type="button">Confirm Import</button>
-              <button id="importClearPreview" type="button" class="muted">Clear Preview</button>
-            </div>
-          </div>
         </section>
 
         <section class="card">
@@ -139,12 +122,10 @@
           <div style="margin-bottom:12px;">
             <input id="searchBox" type="text" placeholder="Search by code or name..." style="padding:8px;border-radius:6px;border:1px solid #e6edf3;width:100%;max-width:300px;">
           </div>
-          <div class="table-scroll">
-            <table id="itemTable">
-              <thead><tr><th>Code</th><th>Name</th><th>Category</th><th>Unit Price</th><th>Material</th><th>Shape</th><th>Brand</th><th>Notes</th><th>Reorder Pt</th><th>Actions</th></tr></thead>
-              <tbody></tbody>
-            </table>
-          </div>
+          <table id="itemTable">
+            <thead><tr><th>Code</th><th>Name</th><th>Category</th><th>Unit Price</th><th>Actions</th></tr></thead>
+            <tbody></tbody>
+          </table>
         </section>
       </div>
 
