--- a/settings-employee.html
+++ b/settings-employee.html
@@ -40,7 +40,10 @@
     <main class="main">
       <header class="topbar">
         <h1>Settings</h1>
-        <div class="topbar-right"><button id="logoutBtn" class="muted">Logout</button></div>
+        <div class="topbar-right">
+          <button id="refreshSessionBtn" class="muted" type="button">Refresh Access</button>
+          <button id="logoutBtn" class="muted">Logout</button>
+        </div>
       </header>
 
       <section class="card inventory-card">
