--- a/settings.html
+++ b/settings.html
@@ -220,6 +220,7 @@
                   <option value="newest">Newest</option>
                   <option value="oldest">Oldest</option>
                 </select>
+                <button id="userRefreshBtn" type="button" class="muted">Refresh Users</button>
                 <button id="userExportBtn" type="button" class="muted">Export CSV</button>
               </div>
               <table id="usersTable">
