Manager  dashboard improved for mobile

--- a/ops-dashboard.html
+++ b/ops-dashboard.html
@@ -8,7 +8,7 @@
   <link rel="manifest" href="manifest.json" />
   <link rel="stylesheet" href="css/style.css" />
 </head>
-<body data-ds="pro">
+<body data-ds="pro" data-page="ops-dashboard">
   <div class="app">
     <aside class="sidebar">
       <div>
@@ -296,6 +296,12 @@
             </table>
           </div>
         </section>
+      </div>
+      <div class="mobile-quickbar">
+        <a href="inventory-operations.html?mode=checkout">Pick</a>
+        <a href="inventory-operations.html?mode=checkin">Receive</a>
+        <a href="inventory-operations.html?mode=return">Return</a>
+        <a href="inventory-list.html">Inventory</a>
       </div>
     </main>
   </div>
